Project project_name {
    database_type: 'PostgreSQL'
    Note: 'Database for a chat application'
}

Table users as U {
    id bigserial [pk]
    username varchar [not null, unique]
    hashed_password varchar [not null]
    avatar varchar [not null]
    nickname varchar [not null]
    role varchar [not null]
    room_id bigint [ref: > R.id, not null]
    deleted boolean [not null, default: false]
    create_at timestamptz [not null, default: `now()`]
}

Table friends as F {
    requester_id bigint [ref: > U.id]
    addressee_id bigint [ref: > U.id]
    room_id bigint [ref: > R.id, not null]
    status varchar [not null]
    create_at timestamptz [not null, default: `now()`]

    indexes {
        (requester_id, addressee_id) [pk]
    }
}

Table rooms as R {
    id bigserial [pk]
    name varchar [not null]
    cover varchar [not null]
    category varchar [not null]
    create_at timestamptz [not null, default: `now()`]
}

Table members as Y {
    member_id bigint [ref: > U.id]
    room_id bigint [ref: > R.id]
    rank varchar [not null]
    join_at timestamptz [not null, default: `now()`]

    indexes {
        (room_id, member_id) [pk]
    }
}
